fixed overlapping items bug

--- a/src/partials/_base.scss
+++ b/src/partials/_base.scss
@@ -7,7 +7,7 @@ html { box-sizing: border-box;}
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 .App-wrapper {
-    max-width: 1400px;
+    max-width: 1280px;
     width: 90%;
     margin: 0 auto;
 }
