--- a/src/partials/_mediaQueries.scss
+++ b/src/partials/_mediaQueries.scss
@@ -4,7 +4,8 @@
     // lg (large) screens: widths between 992px and 1199px 
     // xl (extra large) screens: widths of 1200px or greater
 
-@media (min-width: 320px) and (max-width: 480px) {
+// @media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 480px) {
 
 .App-wrapper {
     width: 100%;
@@ -43,8 +44,12 @@
         }
     .navShow {
         flex-direction: column;
+        flex-wrap: wrap;
         position: absolute;
         width: 100%;
+        height: 30vh;
+        line-height: 2rem;
+        padding-left: 5%;
         background-color: white;
         top: 0;
         transform: translateX(-1%);
@@ -58,28 +63,36 @@
 }
 
 .storyBox {
-    flex-direction: column;
+    // flex-direction: column;
     width: 95%;
+    margin: 1%;
     .department {
-        margin: 10px;
+       display: none;
     }
     .imageContainer {
-        width: 300px;
+        max-width: 30%;
         a {
             img {
                 width: 100%;
             }
+        }
+        .photoCredit {
+            display: none;
         }
     }
     .storyText {
         .title {
             h1 {
                 margin: 2px auto;
-                text-align: center;
+                text-align: left;
+                font-size: 1rem;
             }
-            .byLine {
-                font-size: 0.6rem;
-                // line-height: 0.6rem;
+            p{
+                font-size:large
+            }
+            .byLine,
+            .date {
+                display: none;
             }
 
         }
@@ -132,7 +145,8 @@
             top: 0px;
             transform: translateX(0%);
             transition: transform 0.5s ease-in-out;
-            height: 35vh;
+            height: 25vh;
+            line-height: 2rem;
         }
 
     }
@@ -146,13 +160,14 @@
     }
 
     .storyBox {
-        flex-direction: column;
+        // flex-direction: column;
         width: 90%;
+        margin: .5%;
         .department {
-            margin: 5px;
+            display: none;
         }
         .imageContainer {
-            width: 95%;
+            max-width: 30%;
 
             a {
                 img {
@@ -166,10 +181,13 @@
                 h3 {
                     margin: 2px auto;
                 }
+                .abstract {
+                    font-size: .8rem;
+                }
 
-                .byLine {
-                    font-size: 0.6rem;
-                    // line-height: 0.6rem;
+                .byLine, 
+                .date {
+                    display: none;
                 }
 
             }
@@ -202,7 +220,7 @@
         position: absolute;
         background-color: white;
         top: 0;
-        transform: translateY(-105%);
+        transform: translateY(-110%);
         transition: transform 0.5s ease-in-out;
         li {
             a {
@@ -217,7 +235,8 @@
         top: 0px;
         transform: translateY(5%);
         transition: transform 0.5s ease-in-out;
-        height: 35vh;
+        height: 25vh;
+        line-height: 2rem;
     }
 }
 
@@ -284,7 +303,7 @@
         width: 100%;
         background-color: white;
         top: 0;
-        transform: translateY(-105%);
+        transform: translateY(-110%);
         transition: transform 0.5s ease-in-out;
         li {
             a {
@@ -357,7 +376,7 @@
 }
 
 .headerTitle {
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1.5px solid lightgray;
 }
 
 .navContainer {
@@ -374,16 +393,7 @@
         display: none;
     }
     .imageContainer {
-        width: 90%;
-        margin-top: 15px;
-        align-self: flex-start;
-        a {
-            img {
-                width: 100%;
-            }
-        }
         .photoCredit {
-            // display: none;
             margin: 0px;
         }
     }
@@ -391,18 +401,23 @@
 
 .storyComponent {
         display: grid;
-        grid-template-columns: [first] 650px [line2] 420px;
-        grid-template-rows: repeat(2, 1fr) auto;
+        grid-template-columns: [first] 55% [line2] 38%;
+        grid-template-rows: repeat(2, 1fr);
         align-items:flex-start;
-        
+        row-gap: 2px;
+        max-width: 100%;
+
         .storyBox:nth-child(1) {
                 grid-column: 1 / span 1;
                 grid-row: 1 / span 2;
-                width:98%;
-                height: 650px;
+                max-width:98%;
+                height: 60%;
                 flex-direction: column;
+                margin-top: 1%;
                 .imageContainer {
-                    width: 97%;
+                    max-width: 97%;
+                    max-height: auto;
+                    width: 95%;
                 }
                 h3 {
                     margin: 0px;
@@ -422,23 +437,29 @@
             grid-column: 1 / span 1;
             grid-row: 2 / span 1;
             width: 98%;
-            height: 335px;
-            margin-top: 165px;
+            height: 77%;
+            margin-top: 24%;
             flex-direction: row;
+            align-self: flex-end;
             .imageContainer {
-                width: 97%;
+                width: 155%;
             }
-            .date,
-            .byLine,
-            .photoCredit {
-                display: none;
+            .storyText {
+                width: 65%;
+                .date,
+                .byLine,
+                .photoCredit,
+                .abstract {
+                    display: none;
+                }
             }
         }
         .storyBox:nth-child(3),
         .storyBox:nth-child(4) {
             grid-column: 2;
             width: 100%;
-            height:  490px;
+            height:  98%;
+            margin-top: 2%;
             flex-direction: column;
             .imageContainer {
                     width: 90%;
@@ -460,14 +481,16 @@
         .storyBox:nth-child(n+5) {
             grid-column: 1 / span 2;
             width: 100%;
-            height: 365px;
+            height: 97%;
+            margin-top: 1%;
             img {
-                width:450px;
+                width:100%;
             }
             .imageContainer {
-                width: 470px;
+                width: 35%;
             }
             .storyText {
+                width: 65%;
                 .title {
                     h3 {
                         font-size: 1.7rem;
