--- a/src/partials/_story.scss
+++ b/src/partials/_story.scss
@@ -12,7 +12,7 @@ main {
 
 .storyBox {
     display: flex;
-    width: 80%;
+    // width: 80%;
     // margin: 10px 0 0 0;
     border: 1px solid black;
     box-shadow: 5px 5px 3px grey;
